# NSDron

./: .gitignore  README.md
docs/: architecture.md  hardware.md  plan.md
ros2/: README.md  interfaces.md
ros2/nodes/: mavlink_bridge.py  mission_node.py  pose_bridge.py
ros2/nsdron_ros2/: README.md  package.xml  setup.cfg  setup.py
ros2/nsdron_ros2/launch/: nsdron_launch.py
ros2/nsdron_ros2/nsdron_ros2/: control_node.py  mavlink_bridge.py
sim/: INSTALL.md  README.md  check_camera_topics.sh  gazebo_notes.md  gui_view.config  make_video.sh  preflight_takeoff.py  record_camera_ros2.sh  record_dataset.sh  serial0_mavlink.parm  serial0_udp.parm  serial1_mavlink.parm  serial1_udp.parm  setup_sitl.sh  start_all.sh  start_sitl.sh  start_visual.sh  stop_all.sh
sim/models/d455_camera/: model.config  model.sdf
sim/worlds/: iris_d455.world
training/: README.md  config.yaml  env.py  log_mavlink.py  plot_logs.py  requirements.txt  smoke_test.py  train.py
