<?xml version="1.0"?>
<package format="3">
  <name>nsdron_ros2</name>
  <version>0.0.1</version>
  <description>ROS2 nodes for NSDron MVP.</description>
  <maintainer email="dev@example.com">NSDron</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pymavlink</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
